

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/cardview_dark_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_marginTop="40dp">

        <ImageView
            android:id="@+id/image_country"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/countries"
            />

    </android.support.v7.widget.CardView>


<!--3rd card view-->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="325dp">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text=""
            android:gravity="center"
            android:textSize="30dp"
            android:textColor="@color/cardview_dark_background"
            android:hint="Take your guess!"
            />
    </android.support.v7.widget.CardView>
<!---->




    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="700dp"
        android:layout_height="70dp"
        android:layout_marginTop="390dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/answer1"
                android:text="@string/russia"
                android:layout_width="205dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/answer2"
                android:text="@string/mexico"
                android:layout_width="205dp"
                android:layout_height="match_parent" />
        </LinearLayout>
    </android.support.v7.widget.CardView>



    <android.support.v7.widget.CardView
        android:layout_width="700dp"
        android:layout_height="70dp"
        android:layout_marginTop="450dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/answer3"
                android:layout_width="205dp"
                android:layout_height="match_parent"
                android:text="@string/greece"/>
            <Button
                android:id="@+id/answer4"
                android:layout_width="205dp"
                android:layout_height="match_parent"
                android:text="@string/us"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_width="700dp"
        android:layout_height="70dp"
        android:layout_marginTop="515dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/previous_button"
                android:layout_width="205dp"
                android:layout_height="match_parent"
                android:text="@string/previous"
                android:theme="@style/PrimaryFlatButton"/>

            <Button
                android:id="@+id/next_button"
                android:layout_width="205dp"
                android:layout_height="match_parent"
                android:text="@string/next"
                android:theme="@style/PrimaryFlatButton"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</FrameLayout>